# irc-filehost

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: auth.rs  error.rs  extensions.rs  main.rs  metadata.rs  opengraph.rs  serve.rs  template.rs  templates.rs  upload.rs
src/templates/: embed_template.rs  error_template.rs
templates/: embed.html  error.html  index.html
