[package]
name = "filehost"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6"
actix-web = "4"
base64 = "0.22.1"
bytesize = "2.4.2"
content_disposition = "0.4"
derive_more = { version = "2", features = ["error", "display"] }
futures = "0"
hex = "0"
infer = "0.19.0"
rand = "0"
sha2 = "0"
tokio = { version = "1.52.3", features = ["fs"] }
