[package]
name = "filehost"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6"
actix-web = "4"
base64 = "0.22"
bytesize = "2"
chrono = { version = "0.4", features = ["alloc", "clock", "now", "std", "serde"], default-features = false }
content_disposition = "0.4"
derive_more = { version = "2", features = ["error", "display"] }
futures = "0"
hex = "0"
infer = "0.19.0"
mime_guess = "2.0.5"
rand = "0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0"
tokio = { version = "1.52.3", features = ["fs"] }
tokio-util = "0.7.18"
toml = "1.1.2"
